# python_sqlite_example

./: create_tbl.py  database.py  dict_to_json.md  gen_cnpj.py  insert.py  models.py  pyproject.toml  requirements.txt  settings.py  settings.toml  tables.json
db/: test.db
